--- a/parque/INDEX.html
+++ b/parque/INDEX.html
@@ -7,7 +7,7 @@
 </head>
 <body>
       <h1>Parque Estadual Ilha Bela</h1>
-      <img src="parque-jpg.jpg" alt="parque estadual">
+      <img src="img.jpg" alt="parque estadual">
       <h2>O lugar Ideal Para Momentos Inesquecíveis</h2>
       <p>
          Fundado em 1992, o Parque Estadual Ilha Bela é um lugar para você desfrutar de ótimos momentos. 
