--- a/parque/INDEX.html
+++ b/parque/INDEX.html
@@ -6,29 +6,37 @@
     <title>Parque Estadual Ilha Bela</title>
 </head>
 <body>
-      <h1>Parque Estadual Ilha Bela</h1>
-      <img src="img.jpg" alt="parque estadual">
-      <h2>O lugar Ideal Para Momentos Inesquecíveis</h2>
-      <p>
-         Fundado em 1992, o Parque Estadual Ilha Bela é um lugar para você desfrutar de ótimos momentos. 
-         Atualmente 2 milhões de visitantes passam pelo parque para conhecer o local. Veja o que o parque
-         oferece: 
-      </p>
-      <h3>Tranquilidade e Segurança</h3>
-      <p>
-          Por todo o parque é possivel ver um clima de tranquilidade e segurança. É o lugar perfeito para se 
-          reunir com amigos, familiares ou até mesmo para visitar sozinho.
-      </p>
-      <h4>Paisagens de Tirar o Fôlego</h4>
-      <p>
-          Diversos tipos de paisagens podem ser vistas ao longo do parque, emtão é garantia de fotos incríveis
-          de todos os tipos. 
-      </p>
-      <h5>Entrada Franca</h5>
-      <p>
-          A entrada no parque é totalmente gratuíta. A exceção fica por conta de algumas atividades que podem 
-          ser feitas no local. Para mais informações entre enm contato clicando logo abaixo.
-      </p>
+    <div>
+          <h1>Parque Estadual Ilha Bela</h1>
+          <img src="img.jpg" alt="parque estadual">
+          <h2>O lugar Ideal Para Momentos Inesquecíveis</h2>
+          <p>
+              Fundado em 1992, o Parque Estadual Ilha Bela é um lugar para você desfrutar de ótimos momentos. 
+              Atualmente 2 milhões de visitantes passam pelo parque para conhecer o local. Veja o que o parque
+              oferece: 
+          </p>
+    </div>
+    <div>      
+           <h3>Tranquilidade e Segurança</h3>
+           <p>
+               Por todo o parque é possivel ver um clima de tranquilidade e segurança. É o lugar perfeito para se 
+               reunir com amigos, familiares ou até mesmo para visitar sozinho.
+           </p>
+    </div>
+    <div>       
+           <h4>Paisagens de Tirar o Fôlego</h4>
+           <p>
+               Diversos tipos de paisagens podem ser vistas ao longo do parque, emtão é garantia de fotos incríveis
+               de todos os tipos. 
+           </p>
+    </div>
+    <div>      
+           <h5>Entrada Franca</h5>
+           <p>
+               A entrada no parque é totalmente gratuíta. A exceção fica por conta de algumas atividades que podem 
+               ser feitas no local. Para mais informações entre enm contato clicando logo abaixo.
+           </p>
+    </div>       
        <a href="tel:+5599999-9999">clique aqui</a>
 </body>
 </html>
