--- a/parque/INDEX.html
+++ b/parque/INDEX.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parque Estadual Ilha Bela</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <div>
@@ -36,7 +37,8 @@
                A entrada no parque é totalmente gratuíta. A exceção fica por conta de algumas atividades que podem 
                ser feitas no local. Para mais informações entre enm contato clicando logo abaixo.
            </p>
-    </div>       
+           
        <a href="tel:+5599999-9999">clique aqui</a>
+    </div>   
 </body>
 </html>
